# ePC-SAFT

./: .codex_figiel2025.txt  .gitattributes  .gitignore  .gitmodules  .graphifyignore  AGENTS.md  BRANCH_CHECKOUT_CAVEAT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  COPY_PASTE_AGENT_PROMPTS.md  MANIFEST.in  README.md  __init__.py  _tmp_esteso1989.txt  _tmp_esteso1989_p1.txt  _tmp_esteso1989_p10.txt  _tmp_esteso1989_p11.txt  _tmp_esteso1989_p12.txt  _tmp_esteso1989_p2.txt  _tmp_esteso1989_p3.txt  _tmp_esteso1989_p4.txt  _tmp_esteso1989_p5.txt  _tmp_esteso1989_p6.txt  _tmp_esteso1989_p7.txt  _tmp_esteso1989_p8.txt  _tmp_esteso1989_p9.txt  build_config.py  codex-handoff-equilibrium-v3.md  codex-handoff-equilibrium-v4-electrolyte-lle.md  codex-handoff-equilibrium-workflow.md  codex-handoff-mea-ion-binary-regression.md  pcsaft.cp312-win_amd64.pyd  pcsaft.cp313-win_amd64.pyd  pcsaft.cpp  pcsaft.pxd  pcsaft.pyx  pcsaft_electrolyte.cpp  pcsaft_electrolyte.h  (+6 more)
.codex/: config.toml  dielc-plan.md  mu_derivation.md  mu_derivation_epsx.md
.codex/agents/: build_packaging_owner.toml  command_runner.toml  native_equation_owner.toml  native_solver_backend_owner.toml  python_api_test_owner.toml
.codex/environments/: README.md  environment.toml  setup.ps1
.cython_build/lib/: pcsaft.cp313-win_amd64.pyd
.github/ISSUE_TEMPLATE/: downstream_dependency_bug.yml  upstream_package_request.yml
.github/workflows/: build_wheels.yml  native-build-profiles.yml  publish-pypi.yml  wheels.yml
.run/: build-native-extension.run.xml  build-status.run.xml  doctor.run.xml  validate-quick.run.xml
analyses/: README.md
analyses/2012_held/: README.md  analysis.yaml  data_gap_report.md
analyses/2014_held/: README.md  analysis.yaml  data_gap_report.md
analyses/2015_baygi/: README.md  analysis.yaml
analyses/2019_bulow/: README.md  analysis.yaml  assumptions.md
analyses/2020_bulow/: README.md  analysis.yaml  data_gap_report.md
analyses/2025_figiel/: README.md  analysis.yaml
analyses/2026_khudaida/: README.md  analysis.yaml  provenance_notes.md
analyses/_template/: README.md  analysis.yaml
analyses/dielectric_fits/: analysis.yaml
analyses/miac_fits/: README.md  analysis.yaml
analyses/osmotic_validation/: README.md  analysis.yaml
analyses/package_plot_smokes/: README.md  analysis.yaml
build_backend/: epcsaft_build_backend.py  native_dependency_policy.py
cmake/: FindEigen3.cmake
data/: epcsaft_properties.py
data/G_trans/: gibbs-energies-of-transfer-of-cations-from-water-to-mixed-aqueous-organic-solvents.xlsx  plot_gtrans_water_methanol.py  water-methanol.csv
data/epc-saft_parameters/: 2021.csv  epc-saft_parameters.json  index.csv
data/epcsaft_parameters/: USER_OPTIONS.md
data/multiphase/: ascani_case2_model_comparison.csv  ascani_case2_model_comparison.md
data/pure_component/: README.md
docs/: COPY_PASTE_AGENT_PROMPTS.md  README.rst  algorithms.md  algorithms_registry.yaml  api_reference.rst  codex_implementation_plan.md  conf.py  equations.md  equations_registry.yaml  example.py  getting_started.rst  index.rst  multiphase_algorithm_equations.md  multiphase_lle.md  native-ipopt-regression-plan.md  package_guide.rst  parameter_regression.rst  plot_gallery.md  requirements.txt  skill_refresh_multiphase_algorithm_README.md  skill_refresh_multiphase_algorithm_SKILL.md  user_options.rst
docs/adr/: 0001-architecture-deepening-public-api-boundaries.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/future_plans/: ipopt_integration_plan.md
docs/goals/: pr56-salvage-map.md
docs/handoffs/: copy_paste_repair_agent_prompt.md  lithium_extraction_rezaee_surrogate_handoff.md
docs/latex/: .latexmkrc  algorithms.tex  equations.tex  equations_old.tex  library.bib  references.bib  sync_to_overleaf_mirror.ps1
docs/pages/: README.rst  (+24 more)
epcsaft/: __init__.py
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  GRAPH_TREE.html  benchmark.txt  graph.html  graph.json  manifest.json
notebooks/: miac_fit_explorer.ipynb
plans/: graphify_codebase_improvement_handoff.md
scripts/: README.md  _env.py  _epcsaft_oop.py  _pcsaft_oop.py  _tmp_update_held2014.py  benchmark_literature_suite.py  benchmark_native_ceres_thermo_regression.py  benchmark_native_regression.py  benchmark_neutral_equilibrium.py  benchmark_reactive_regression.py  bootstrap_uv.ps1  bootstrap_uv.sh  build_dist.py  build_epcsaft.py  build_equations_pdf.ps1  build_pcsaft.py  build_plot_manifest.py  build_test_plot_gallery.py  clean_build.ps1  clean_build.sh  codex_check.py  codex_doctor.py  create_codex_worktree.ps1  diagnose_khudaida_seeded_lle.py  doctor.py  install_dev.py  install_latex_sync_hook.ps1  plot_outputs.py  profile_regression_parmest.py  profile_regression_runtime.py  run_in_repo_env.ps1  run_salt_solvent_combo_tests.py  setup_latex_mirror.ps1  setup_windows_cyipopt_uv.ps1  sync_equation_registry.py  sync_latex_mirror.ps1  triage_dependency_issue.py  validate_electrolyte_lle_confidence.py  validate_hydrocarbon_regression.py  validate_project.py
tests/: test_DH_born_models.py  test_build_epcsaft.py  test_cython.py  test_dielc_diff.py  test_dielc_fit.py  test_equation_registry.py  test_equilibrium_api.py  test_equilibrium_lle.py  test_equilibrium_plot_outputs.py  test_equilibrium_stability.py  test_equilibrium_vle.py  test_methanol_fits.py  test_multiphase.py  test_native_runtime_contracts.py  test_oop.py  test_package_main.py  test_parameter_templates.py  test_plot_gallery_outputs.py  test_reference_comparison_plot_outputs.py  test_regression.py  test_regression_api.py  test_run_pytest.py  test_runtime.py  test_runtime_profile.py  test_runtime_profile_miac.py  test_runtime_profile_regression.py  test_water_fits.py  test_workflow_entrypoints.py  validation_2014_repro.py  validation_miac_versions.py  validation_tests.py  validation_version_analysis.py
tmp/: bulow2020_part1_layout.txt
tmpeguedxuz/: pure.json
tmpye45mha_/: binary.json  pure.json
workbooks/: PC-SAFT Calculations - Hydrocarbon Basis.xlsm  figure3_hc_audit.xlsm
(+2246 files in other folders)
