[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "Cython>=3.0",
    "numpy>=2.0",
    "includeigen>=0.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "epcsaft"
version = "1.5.0"
description = "The ePC-SAFT equation of state, including dipole, association, and ion terms."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Tanner Polley" },
]
dependencies = [
    "numpy>=2.0",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/tannerpolley/ePC-SAFT"
Documentation = "https://epcsaft.readthedocs.io/en/latest/"
Repository = "https://github.com/tannerpolley/ePC-SAFT"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
epcsaft = [
    "*.pyx",
    "*.pxd",
    "*.h",
    "*.cpp",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"

