[build-system]
requires = [
    "scikit-build-core>=0.12",
    "pybind11>=3.0",
    "numpy>=2.0",
    "includeigen>=0.1",
]
build-backend = "epcsaft_build_backend"
backend-path = ["build_backend"]

[project]
name = "epcsaft"
version = "1.5.0"
description = "The ePC-SAFT equation of state, including dipole, association, and ion terms."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Tanner Polley" },
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/tannerpolley/ePC-SAFT"
Documentation = "https://epcsaft.readthedocs.io/en/latest/"
Repository = "https://github.com/tannerpolley/ePC-SAFT"

[dependency-groups]
test = [
    "matplotlib>=3.8",
    "plotly>=6.0",
    "pytest>=8.0",
]
build = [
    "build>=1.2",
    "cibuildwheel>=2.23",
    "cmake>=3.20",
    "includeigen>=0.1",
    "ninja>=1.11",
    "pybind11>=3.0",
    "scikit-build-core>=0.12",
]
dev = [
    { include-group = "test" },
    { include-group = "build" },
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.scikit-build]
minimum-version = "0.12"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/epcsaft"]
cmake.version = ">=3.20"
ninja.version = ">=1.11"

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "build_backend/*.py",
    "src/epcsaft/**/*.py",
    "src/epcsaft/**/*.cpp",
    "src/epcsaft/**/*.h",
    "tests/**/*.py",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -p no:cacheprovider"
